--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" class="favicon" href="./models/logo_elevtober.png">
     <title>Elevtober 3D Demo</title>
   </head>
   <body>
@@ -10,3 +12,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
