final ver. demo

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Elevtober 3D Demo" />
     <meta property="og:description" content="Interactive 3D experience for Elevtober" />
-    <meta property="og:image" content="https://juanmaacampos.github.io/elevtober_3d_demo/models/Screenshot from 2025-06-05 16-14-39.png" />
+    <meta property="og:image" content="https://juanmaacampos.github.io/elevtober_screen.png" />
     <meta property="og:url" content="https://juanmaacampos.github.io/elevtober_3d_demo/" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Elevtober 3D Demo" />
     <meta name="twitter:description" content="Interactive 3D experience for Elevtober" />
-    <meta name="twitter:image" content="https://juanmaacampos.github.io/elevtober_3d_demo/models/Screenshot from 2025-06-05 16-14-39.png" />
+    <meta name="twitter:image" content="https://juanmaacampos.github.io/elevtober_3d_demo/Screenshot from 2025-06-05 16-14-39.png" />
     
     <link rel="icon" class="favicon" href="./models/logo_elevtober.png">
     <title>Elevtober 3D Demo</title>
