--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://juanmaacampos.github.io/elevtober_3d_demo/Screenshot from 2025-06-05 16-14-39.png" />
     
     <link rel="icon" class="favicon" href="./models/logo_elevtober.png">
-    <title>Elevtober 3D Demo</title>
+    <title>JMCDEV 3D Demo</title>
   </head>
   <body>
     <div id="root"></div>
